--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <a href="#">Главная</a><span>/</span>
         <a href="gamepuzzle.html">Загадки</a><span>/</span>
         <a href="guessnumber.html">Угадайка</a><span>/</span>
-        <a href="guesstwo.html">Угадайка-мультиплеер</a>
+        <a href="guesstwo.html">Угадайка-мультиплеера</a>
     </div>
 	<div id="content">
 	     <h1>Личный сайт студента Geekbrains Ксении Петровой</h1>
